--- a/stacks.html
+++ b/stacks.html
@@ -18,5 +18,6 @@
             <p style="font-size:medium;">HTML</p>
         </li>
     </ul>
+    <a href="index.html">PREVOIUS PAGE</a>
 </body>
 </html>
